--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
         <div class="calculator">
             <div class="numbers">
                 <!-- also known as operands -->
-                <button data-type="numbers" value=1 type="button">1</button>
-                <button data-type="numbers" type="button">2</button>
-                <button data-type="numbers" type="button">3</button>
-                <button data-type="numbers" type="button">4</button>
-                <button data-type="numbers" type="button">5</button>
-                <button data-type="numbers" type="button">6</button>
-                <button data-type="numbers" type="button">7</button>
-                <button data-type="numbers" type="button">8</button>
-                <button data-type="numbers" type="button">9</button>
-                <button data-type="numbers" type="button">0</button>
+                <button data-type="number" value=1 type="button">1</button>
+                <button data-type="number" type="button">2</button>
+                <button data-type="number" type="button">3</button>
+                <button data-type="number" type="button">4</button>
+                <button data-type="number" type="button">5</button>
+                <button data-type="number" type="button">6</button>
+                <button data-type="number" type="button">7</button>
+                <button data-type="number" type="button">8</button>
+                <button data-type="number" type="button">9</button>
+                <button data-type="number" type="button">0</button>
             </div>
             <div class="function">
-                <button data-type="clear" type="button">C</button>
+                <button data-type="clear" id="clear" type="button">AC</button>
                 <button data-type="sign" type="button">+/-</button>
                 <button data-type="percent" type="button">%</button>
                 <!-- does this go above or below? -->
-                <button data-type="decimal" type="button">.</button>
+                <button data-type="number" type="button">.</button>
 
             </div>
             <div class="operators">
@@ -38,7 +38,8 @@
                 <button data-type="operator" data-operator="equals" type="button">=</button>
             </div>
             <div class=display>
-                add transition finish event listner for numbers
+                <!-- add transition finish event listner for numbers -->
+                0
             </div>
         </div>
     </div>
