--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <button data-type="number" type="button">7</button>
                 <button data-type="number" type="button">8</button>
                 <button data-type="number" type="button">9</button>
-                <button data-type="number" type="button">0</button>
+                <button data-type="number" id="zero" type="button">0</button>
                 <button data-type="number" type="button">.</button>
             </div>
             <div class="operators">
-                <button data-type="operator" data-operator="divide" type="button">/</button>
-                <button data-type="operator" data-operator="multiply" type="button">x</button>
-                <button data-type="operator" data-operator="add" type="button">+</button>
-                <button data-type="operator" data-operator="subtract" type="button">-</button>
-                <button data-type="operator" data-operator="equals" type="button">=</button>
+                <button data-type="operator" class="operator" data-operator="divide" type="button">/</button>
+                <button data-type="operator" class="operator" data-operator="multiply" type="button">x</button>
+                <button data-type="operator" class="operator" data-operator="subtract" type="button">-</button>
+                <button data-type="operator" class="operator" data-operator="add" type="button">+</button>
+                <button data-type="operator" class="equals" data-operator="equals" type="button">=</button>
             </div>
         </div>
     </div>
