--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             </div>
             <div class="numbers">
                 <!-- also known as operands -->
-                <button data-type="number" value=1 type="button">1</button>
-                <button data-type="number" type="button">2</button>
-                <button data-type="number" type="button">3</button>
-                <button data-type="number" type="button">4</button>
-                <button data-type="number" type="button">5</button>
-                <button data-type="number" type="button">6</button>
-                <button data-type="number" type="button">7</button>
-                <button data-type="number" type="button">8</button>
-                <button data-type="number" type="button">9</button>
-                <button data-type="number" id="zero" type="button">0</button>
+                <button data-type="number" data-key="49" type="button">1</button>
+                <button data-type="number" data-key="50" type="button">2</button>
+                <button data-type="number" data-key="51" type="button">3</button>
+                <button data-type="number" data-key="52" type="button">4</button>
+                <button data-type="number" data-key="53" type="button">5</button>
+                <button data-type="number" data-key="54" type="button">6</button>
+                <button data-type="number" data-key="55" type="button">7</button>
+                <button data-type="number" data-key="56" type="button">8</button>
+                <button data-type="number" data-key="57" type="button">9</button>
+                <button data-type="number" data-key="48" id="zero" type="button">0</button>
                 <button data-type="number" type="button">.</button>
             </div>
             <div class="operators">
