keyboard support and css fixes

--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
             </div>
             <div class="numbers">
                 <!-- also known as operands -->
-                <button data-type="number" data-key="49" type="button">1</button>
-                <button data-type="number" data-key="50" type="button">2</button>
-                <button data-type="number" data-key="51" type="button">3</button>
-                <button data-type="number" data-key="52" type="button">4</button>
-                <button data-type="number" data-key="53" type="button">5</button>
-                <button data-type="number" data-key="54" type="button">6</button>
-                <button data-type="number" data-key="55" type="button">7</button>
-                <button data-type="number" data-key="56" type="button">8</button>
-                <button data-type="number" data-key="57" type="button">9</button>
-                <button data-type="number" data-key="48" id="zero" type="button">0</button>
-                <button data-type="number" type="button">.</button>
+                <button data-type="number" data-key="1" data-keyCode="49" type="button">1</button>
+                <button data-type="number" data-key="2" data-keyCode="50" type="button">2</button>
+                <button data-type="number" data-key="3" data-keyCode="51" type="button">3</button>
+                <button data-type="number" data-key="4" data-keyCode="52" type="button">4</button>
+                <button data-type="number" data-key="5" data-keyCode="53" type="button">5</button>
+                <button data-type="number" data-key="6" data-keyCode="54" type="button">6</button>
+                <button data-type="number" data-key="7" data-keyCode="55" type="button">7</button>
+                <button data-type="number" data-key="8" data-keyCode="56" type="button">8</button>
+                <button data-type="number" data-key="9" data-keyCode="57" type="button">9</button>
+                <button data-type="number" data-key="0" data-keyCode="48" id="zero" type="button">0</button>
+                <button data-type="number" data-key="." data-keyCode="190"type="button">.</button>
             </div>
             <div class="operators">
-                <button data-type="operator" class="operator" data-operator="divide" type="button">/</button>
-                <button data-type="operator" class="operator" data-operator="multiply" type="button">x</button>
-                <button data-type="operator" class="operator" data-operator="subtract" type="button">-</button>
-                <button data-type="operator" class="operator" data-operator="add" type="button">+</button>
-                <button data-type="operator" class="equals" data-operator="equals" type="button">=</button>
+                <button data-type="operator" class="operator" data-key= "/" data-operator="divide" type="button">/</button>
+                <button data-type="operator" class="operator" data-key= "*" data-operator="multiply" type="button">x</button>
+                <button data-type="operator" class="operator" data-key= "-" data-operator="subtract" type="button">-</button>
+                <button data-type="operator" class="operator" data-key= "+" data-operator="add" type="button">+</button>
+                <button data-type="operator" class="equals" data-key= "=" data-operator="equals" type="button">=</button>
             </div>
         </div>
     </div>
